CKA-2024-Rakesh/day26_code/manifest.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: frontend 
  labels:
    role: frontend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - name: http 
      containerPort: 80 
      protocol: TCP
---
apiVersion: v1 
kind: Service  
metadata:
  name: frontend 
  labels:
    role: frontend
spec:
  selector:
    role: frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1  
kind: Pod 
metadata:
  name: backend 
  labels:
    role: backend
spec:
  containers:
  - name: nginx
    image: nginx
    ports:
    - name: http 
      containerPort: 80
      protocol: TCP
---
apiVersion: v1 
kind: Service
metadata:
  name: backend 
  labels:
    role: backend
spec:
  selector:
    role: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
---
apiVersion: v1 
kind: Service
metadata:
  name: db 
  labels:
    name: mysql 
spec:
  selector:
    name: mysql 
  ports:
  - protocol: TCP 
    port: 3306
    targetPort: 3306
---
apiVersion: v1  
kind: Pod 
metadata:
  name: mysql  
  labels:
    name: mysql 
spec: 
  containers:
  - name: mysql 
    image: mysql:latest
    ports:
    - name: http
      containerPort: 3306
      protocol: TCP
